# ml-pres

./: .gitignore  README.md  _quarto.yml  auto_quarto_render.py  conda.yml  index.html  pyproject.toml  title-slide-backup.html  title-slide.html  zhaw-theme.scss
.github/workflows/: azure-static-web-apps-kind-stone-0dc9cb103.yml
bilder-klassifizieren-dl/: bilder-klassifizieren-dl.html  bilder-klassifizieren-dl.qmd
introml/: introml.html  introml.qmd
introml/ressources/: design_matrix.html
notebooks/: noising.html  noising.ipynb
quarto_css/: company-title-slide.css  quarto.css
recommender_systems/assoc_rules/: assoc_rules.html  assoc_rules.qmd
recommender_systems/collab_filtering/: collab_filtering.html
recsys/assoc_rules/: assoc_rules.html  assoc_rules.qmd
recsys/collab_filtering/: collab_filtering.html  collab_filtering.qmd
recsys/content_based/: content_based.html  content_based.qmd
recsys/intro/: recsys_intro.html  recsys_intro.qmd
